<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">DriveTesting</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_drive_test">DriveTestActivity</string>
    <string name="dbname">Adatbázis név</string>
    <string name="dbname_sum">Elmentett adatbázis fájl neve</string>
    <string name="checkbox">checkbox</string>
    <string name="ringtone">ringtone</string>
    <string name="checkbox2">checkbox2</string>
    <string name="text">text</string>
    <string name="list">list</string>
    <string name="export">Start Export</string>
    <string name="outputname">Output file name</string>
    <string name="kml">Export to KML format</string>
    <string name="plaintext">Export to plain text</string>
    <string name="menu_export">Export</string>
    <string name="title_activity_osm">OSMActivity</string>
    <string name="menu_map">Map</string>
    <string name="menu_test">Test</string>
    <string name="menu_main">Main</string>
    <string name="unit_dbm">dBm</string>
    <string name="network_connected">Hálózati kapcoslat aktív!</string>
    <string name="connection_lost">Nincs hálózati kapcsolat </string>
    <string name="phone_header">Telefon adatai</string>
    <string name="network_header">Hálózat adatai</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="protocol">Protocol Type</string>
    <string name="direction">Direction</string>
    <string name="start">Start Test</string>
    <string name="stop">Stop Test</string>
    <string name="clean">Clear Text</string>
    <string name="save">Save</string>    
    

</resources>