<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    <item android:id="@+id/menu_main"  
      android:title="@string/menu_main" 
      android:icon="@drawable/mobil" 
      android:showAsAction="always|withText" />
    
    <item android:id="@+id/menu_test"  
      android:title="@string/menu_test" 
      android:icon="@drawable/test" 
      android:showAsAction="always|withText" />
  
    <item android:id="@+id/menu_map" 
      android:title="@string/menu_map" 
      android:icon="@drawable/map" 
      android:showAsAction="always|withText" />
  
    <item android:id="@+id/menu_export" 
      android:title="@string/menu_export"    
      android:icon="@drawable/export"
      android:showAsAction="always|withText" />
  
  <item android:id="@+id/menu_settings" 
      	android:title="@string/menu_settings"   
      	android:icon="@drawable/setting"
        android:showAsAction="always|withText" />
  
    
         
  </menu>
